# iree-rs

./: Cargo.toml  README.md
examples/: resnet18.rs
iree-sys/: Cargo.toml  build.rs
iree-sys/examples/: resnet18.rs  simple_mul.rs  simple_mul_module.vmfb  test_image.json
iree-sys/src/: helper.rs  lib.rs
iree-sys/src/iree/runtime/: api.rs
scripts/: dump_mlir.ipynb  torchscript_resnet18.py
src/: lib.rs
src/err/: mod.rs
src/ffi/: mod.rs
src/types/: allocator.rs  bytespan.rs  hal_allocator.rs  hal_buffer.rs  hal_device.rs  mod.rs  status.rs
src/types/runtime/: call.rs  instance.rs  mod.rs  session.rs
tests/: test_hal.rs  test_runtime.rs
