[package]
name = "iree-sys"
version = "0.1.0"
edition = "2021"
links = "iree"
description = "Rust FFI bindings for IREE"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.63.0"
cmake = "0.1.49"
git2 = "0.16.1"
pkg-config = "0.3.26"

[dependencies]
anyhow = "1.0.69"

[dev-dependencies]
flatbuffers = { version = "23.1.21", features = ["serde"] }
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tch = "0.10.1"


[[example]]
name = "simple_mul"
test = true

[[example]]
name = "resnet18"
test = true
